# rfc-sandbox

./: README.rst  requirements.txt  setup.cfg  tox.ini
.github/workflows/: lint.yml  test.yml
docs/: conf.py  index.rst
src/bloom_filter/: __init__.py
src/kyber/: __init__.py
src/rfc_1928/: __init__.py  client.py  server.py
src/rfc_1939/: client.py  core.py  server.py
src/rfc_1951/: __init__.py  compress.py  core.py  decompress.py
src/rfc_4634/: sha.py
tests/: test_bloom_filter.py
tests/kyber/: test_kyber.py
tests/rfc_1928/: test_core.py  test_server.py
tests/rfc_1939/: test_core_pop3.py
tests/rfc_1951/: test_compress.py  test_core.py  test_decompress.py
tests/rfc_4634/: test_sha.py
