[metadata]
name = rfc_sandbox
version = 0.1.0
license = Apache 2.0
description = Sandbox repo for me to learn through implementing RFCs of interest
long_description = file: README.rst
author = Jared Crawford
author_email = jmcrawford45@gmail.com
classifiers=
   Development Status :: 1 - Planning
   License :: OSI Approved :: Apache Software License
   Natural Language :: English
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: Implementation :: CPython
   Topic :: Multimedia :: Graphics :: Capture :: Scanners
   Typing :: Typed

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   fixedint

[options.packages.find]
where=src